--- a/main.css
+++ b/main.css
@@ -7,3 +7,13 @@ img{
 h4{
     margin:45px 0;
 }
+
+@media(min-width:20em){
+   .formEr{
+       width: 100%;
+   }
+   .formEr input{
+       width: 72%;
+       margin:8px;
+   }
+}
